Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-12072

Do not unnecessarily construct rec_printer objects in debug builds

    XMLWordPrintable

Details

    Description

      I introduced the rec_printer object in MySQL to pretty-print raw InnoDB records and index tuples in diagnostic messages. These objects are being constructed unconditionally, even though the DBUG_PRINT is not enabled.

      The unnecessary work would be avoided by simply passing rec_printer(…).str() to the DBUG_LOG that was introduced in MDEV-11713.

      Attachments

        Issue Links

          Activity

            People

              marko Marko Mäkelä
              marko Marko Mäkelä
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 1h
                  1h
                  Remaining:
                  0d
                  Logged:
                  Time Not Required
                  Not Specified

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.